file structure remodel

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <p>Po dwóch latach przerwy wznowiłem działalność w temacie tworzenia stron internetowych. Początkowo przypominałem sobie nabyte wiadomości na temat HTML i CSS. Dodatkowo zagłębiłem się w HTML5 i CSS3 oraz zacząłem korzystać z preprocesora
                     SCSS. Kolejnym językiem, którego chciałbym się nauczyć jest JavaScript.
                 </p>
-                <button class="btn-mail">
+                <button class="btn-mail scrollTo">
                     <a href="#contact">#Kontakt</a>
                 </button>
             </section>
@@ -79,28 +79,28 @@
                 <h3>#Poznałem i wykorzystuję:</h3>
                 <ul class="skills-list">
                     <li>
-                        <a class="tooltips"><img src="./img/icons/html5.png" alt="HTML5" class="skills-list__img responsive-img">
-                            <span class="skills-list__tooltip">Dobrze</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/html5.png" alt="HTML5" class="skills-list__img responsive-img">
+                            <span class="skills-list__tooltips-texts-text">Dobrze</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/css3.png" alt="CSS3" class="skills-list__img">
-                            <span class="skills-list__tooltip">Dobrze</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/css3.png" alt="CSS3" class="skills-list__img">
+                            <span class="skills-list__tooltips-text">Dobrze</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/sass.png" alt="Sass" class="skills-list__img">
-                            <span class="skills-list__tooltip">Dobrze</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/sass.png" alt="Sass" class="skills-list__img">
+                            <span class="skills-list__tooltips-text">Dobrze</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/bootstrap.png" alt="Bootstrap" class="skills-list__img">
-                            <span class="skills-list__tooltip">Dobrze</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/bootstrap.png" alt="Bootstrap" class="skills-list__img">
+                            <span class="skills-list__tooltips-text">Dobrze</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/git.png" alt="GitHub" class="skills-list__img">
-                            <span class="skills-list__tooltip">Średnio</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/git.png" alt="GitHub" class="skills-list__img">
+                            <span class="skills-list__tooltips-text">Średnio</span>
                         </a>
                     </li>
                 </ul>
@@ -108,28 +108,28 @@
                 <h3>#Pracuję korzystając z:</h3>
                 <ul class="skills-list">
                     <li>
-                        <a class="tooltips"><img src="./img/icons/atom.png" alt="Atom" class="skills-list__img">
-                            <span class="skills-list__tooltip">GitHub Atom</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/atom.png" alt="Atom" class="skills-list__img">
+                            <span class="skills-list__tooltips-text">GitHub Atom</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/ps.png" alt="Photoshop" class="skills-list__img">
-                            <span class="skills-list__tooltip">Photoshop CC</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/ps.png" alt="Photoshop" class="skills-list__img">
+                            <span class="skills-list__tooltips-text">Photoshop CC</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/chrome.png" alt="Google Chrome Dev" class="skills-list__img">
-                            <span class="skills-list__tooltip">Chrome Dev</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/chrome.png" alt="Google Chrome Dev" class="skills-list__img">
+                            <span class="skills-list__tooltips-text">Chrome Dev</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/mac.png" alt="MacOS" class="skills-list__img">
-                            <span class="skills-list__tooltip">Mac OS</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/mac.png" alt="MacOS" class="skills-list__img">
+                            <span class="skills-list__tooltips-text">Mac OS</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/pc.png" alt="PC" class="skills-list__img">
-                            <span class="skills-list__tooltip">PC</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/pc.png" alt="PC" class="skills-list__img">
+                            <span class="skills-list__tooltips-text">PC</span>
                         </a>
                     </li>
                 </ul>
@@ -137,38 +137,38 @@
                 <h3>#Chcę opanować:</h3>
                 <ul class="skills-list">
                     <li>
-                        <a class="tooltips"><img src="./img/icons/js.png" alt="JavaScript" class="skills-list__img">
-                            <span class="skills-list__tooltip">JavaScript</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/js.png" alt="JavaScript" class="skills-list__img">
+                            <span class="skills-list__tooltips-text">JavaScript</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/jquery.png" alt="jQuery" class="skills-list__img">
-                            <span class="skills-list__tooltip">jQuery</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/jquery.png" alt="jQuery" class="skills-list__img">
+                            <span class="skills-list__tooltips-text">jQuery</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/node.png" alt="Node" class="skills-list__img">
-                            <span class="skills-list__tooltip">Node.js</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/node.png" alt="Node" class="skills-list__img">
+                            <span class="skills-list__tooltips-text">Node.js</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/angular.png" alt="Angular" class="skills-list__img">
-                            <span class="skills-list__tooltip">Angular</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/angular.png" alt="Angular" class="skills-list__img">
+                            <span class="skills-list__tooltips-text">Angular</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/react.png" alt="React" class="skills-list__img">
-                            <span class="skills-list__tooltip">React.js</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/react.png" alt="React" class="skills-list__img">
+                            <span class="skills-list__tooltips-text">React.js</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/bower.png" alt="Bower" class="skills-list__img">
-                            <span class="skills-list__tooltip">Bower</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/bower.png" alt="Bower" class="skills-list__img">
+                            <span class="skills-list__tooltips-text">Bower</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/gulp.png" alt="Gulp" class="skills-list__img">
-                            <span class="skills-list__tooltip">Gulp</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/gulp.png" alt="Gulp" class="skills-list__img">
+                            <span class="skills-list__tooltips-text">Gulp</span>
                         </a>
                     </li>
                 </ul>
