changed page font and fixed view of the page

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
         <meta name="description" content="Portfolio Gabriela Ignatiuka, strona zawiera informację na temat moich umiętności, osiągnięć oraz wykonanych zleceń">
         <meta name="keywords" content="Gabriel, Ignatiuk, frontend, front, end, develeoper, development, HTML5, CSS3, JavaScript, Angular, React, SASS, Atom, Mac">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
         <!-- <link href="./css/style1080.css" rel="stylesheet"> -->
         <!-- <link href="./style720.css" rel="stylesheet"> -->
         <link href="./css/normalize.css" rel="stylesheet" />
         <link href="./css/css.css" rel="stylesheet" />
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
         <!-- Social icons -->
         <script src="https://use.fontawesome.com/dae1dff95d.js"></script>
         <!-- jQuery -->
@@ -79,8 +80,8 @@
                 <h3>#Poznałem i wykorzystuję:</h3>
                 <ul class="skills-list">
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/html5.png" alt="HTML5" class="skills-list__img responsive-img">
-                            <span class="skills-list__tooltips-texts-text">Dobrze</span>
+                        <a class="skills-list__tooltips"><img src="./img/icons/html5.png" alt="HTML5" class="skills-list__img">
+                            <span class="skills-list__tooltips-text">Dobrze</span>
                         </a>
                     </li>
                     <li>
@@ -176,18 +177,18 @@
             <section id="works" class="works">
                 <div class="works-container">
                     <h2>#Projekty wykonane</h2>
-                    <!-- GALLERY IMAGE DIMENSIONS 700X420 -->
-                    <a href="https://github.com/malikowy/MRR" target="_blank" title="Strona dla firmy MRR" class="works-container__gallery rotate"><img src="./img/projects/mrr.png" alt="MRR page view"></a>
-                    <a href="https://github.com/malikowy/portfolio-page" target="_blank" title="Moja pierwsza strona portfolio" class="works-container__gallery rotate"><img src="./img/projects/portfolio.png" alt="My first portfolio page"></a>
-                    <a href="#" title="Lorem ipsum" class="works-container__gallery rotate"><img src="./img/7.jpg" alt="" /></a>
-                    <a href="#" title="Lorem ipsum" class="works-container__gallery rotate"><img src="./img/5.jpg" alt="" /></a>
-                    <a href="#" title="Lorem ipsum" class="works-container__gallery rotate"><img src="./img/6.jpg" alt="" /></a>
-                    <a href="#" title="Lorem ipsum" class="works-container__gallery rotate"><img src="./img/7.jpg" alt="" /></a>
+                    <!-- works-container_gallery IMAGE DIMENSIONS 700X420 -->
+                    <a href="https://github.com/malikowy/MRR" target="_blank" title="Strona dla firmy MRR" class="works-container_gallery rotate"><img src="./img/projects/mrr.png" alt="MRR page view"></a>
+                    <a href="https://github.com/malikowy/portfolio-page" target="_blank" title="Moja pierwsza strona portfolio" class="works-container_gallery rotate"><img src="./img/projects/portfolio.png" alt="My first portfolio page"></a>
+                    <a href="#" title="Lorem ipsum" class="works-container_gallery rotate"><img src="./img/7.jpg" alt="" /></a>
+                    <a href="#" title="Lorem ipsum" class="works-container_gallery rotate"><img src="./img/5.jpg" alt="" /></a>
+                    <a href="#" title="Lorem ipsum" class="works-container_gallery rotate"><img src="./img/6.jpg" alt="" /></a>
+                    <a href="#" title="Lorem ipsum" class="works-container_gallery rotate"><img src="./img/7.jpg" alt="" /></a>
                 </div>
             </section>
             <footer class="contact" id="contact">
                 <div class="contact-list">
-                    <h2>#DANE KONTAKTOWE</h2>
+                    <h2>#Dane kontaktowe</h2>
                     <address class=contact-list__data>
                             <p>Gabriel Ignatiuk</p>
                             <p>Telefon:
@@ -225,8 +226,10 @@
                             </li>
                         </ul>
                     </div>
-                    <p class="contact-list__rights">Portfolio - Gabriel Ignatiuk</p>
-                    <p class="contact-list__update">Ostatnia aktualizacja: grudzień 2016</p>
+                    <div class="contact-list__footer">
+                        <p>Portfolio - Gabriel Ignatiuk</p>
+                        <p>Ostatnia aktualizacja: grudzień 2016</p>
+                    </div>
             </footer>
         </main>
         <!-- SMOOTH SCROLL -->
