--- a/index.html
+++ b/index.html
@@ -9,21 +9,10 @@
         <meta name="keywords" content="Gabriel, Ignatiuk, frontend, front, end, develeoper, development, HTML5, CSS3, JavaScript, Angular, React, SASS, Atom, Mac">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
-        <!-- <link href="./css/style1080.css" rel="stylesheet"> -->
-        <!-- <link href="./style720.css" rel="stylesheet"> -->
         <link href="./css/normalize.css" rel="stylesheet" />
         <link href="./css/css.css" rel="stylesheet" />
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-        <!-- Social icons -->
-        <script src="https://use.fontawesome.com/dae1dff95d.js"></script>
-        <!-- jQuery -->
-        <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-        <!-- drawer.css -->
         <link rel="stylesheet" href="./css/drawer.css">
-        <!--  iScroll -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.1.3/iscroll.min.js"></script>
-        <!-- drawer.js -->
-        <script src="./js/drawer.min.js"></script>
     </head>
 
     <body class="drawer drawer--top drawer--navbarTopGutter" id="top">
@@ -62,13 +51,13 @@
                 </div>
             </section>
             <section class="about" id="about">
-                <img src="./img/statue.png" alt="About me poster">
+                <img src="./img/statue-min.png" alt="About me poster">
                 <h3>Cześć,<br>nazywam się Gabriel Ignatiuk i jestem Junior Front-End Developerem z&nbsp;Warszawy.</h3>
                 <p>Przygodę z tworzeniem stron internetowych rozpocząłem pod koniec piątej klasy podstawówki. Trwała ona około trzy lata po czym, jak każdy nastolatek, moje zainteresowania uległy zmianie. Nabyte umiejętności przydały mi się podczas tworzenia
                     stron internetowych na zajęcia w szkole średniej, czy w tworzeniu strony firmowej dla przyjaciela opartej o framework Bootstrap 3.
                 </p>
                 <p>Po dwóch latach przerwy wznowiłem działalność w temacie tworzenia stron internetowych. Początkowo przypominałem sobie nabyte wiadomości na temat HTML i CSS. Dodatkowo zagłębiłem się w HTML5 i CSS3 oraz zacząłem korzystać z preprocesora
-                    SCSS. Kolejnym językiem, którego chciałbym się nauczyć jest JavaScript.
+                    SCSS. Kolejnym językiem, którego się uczę jest JavaScript, a następny krok to opanowanie React.js.
                 </p>
                 <button class="btn-mail">
                     <a class="scrollTo" href="#contact">#Kontakt</a>
@@ -80,27 +69,27 @@
                 <h3>#Poznałem i wykorzystuję:</h3>
                 <ul class="skills-list">
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/html5.png" alt="HTML5" class="skills-list__img">
+                        <a class="skills-list__tooltips"><img src="./img/icons/html5-min.png" alt="HTML5" class="skills-list__img">
                             <span class="skills-list__tooltips-text">Dobrze</span>
                         </a>
                     </li>
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/css3.png" alt="CSS3" class="skills-list__img">
+                        <a class="skills-list__tooltips"><img src="./img/icons/css3-min.png" alt="CSS3" class="skills-list__img">
                             <span class="skills-list__tooltips-text">Dobrze</span>
                         </a>
                     </li>
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/sass.png" alt="Sass" class="skills-list__img">
+                        <a class="skills-list__tooltips"><img src="./img/icons/sass-min.png" alt="Sass" class="skills-list__img">
                             <span class="skills-list__tooltips-text">Dobrze</span>
                         </a>
                     </li>
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/bootstrap.png" alt="Bootstrap" class="skills-list__img">
+                        <a class="skills-list__tooltips"><img src="./img/icons/bootstrap-min.png" alt="Bootstrap" class="skills-list__img">
                             <span class="skills-list__tooltips-text">Dobrze</span>
                         </a>
                     </li>
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/git.png" alt="GitHub" class="skills-list__img">
+                        <a class="skills-list__tooltips"><img src="./img/icons/git-min.png" alt="GitHub" class="skills-list__img">
                             <span class="skills-list__tooltips-text">Średnio</span>
                         </a>
                     </li>
@@ -109,27 +98,27 @@
                 <h3>#Pracuję korzystając z:</h3>
                 <ul class="skills-list">
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/atom.png" alt="Atom" class="skills-list__img">
+                        <a class="skills-list__tooltips"><img src="./img/icons/atom-min.png" alt="Atom" class="skills-list__img">
                             <span class="skills-list__tooltips-text">GitHub Atom</span>
                         </a>
                     </li>
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/ps.png" alt="Photoshop" class="skills-list__img">
+                        <a class="skills-list__tooltips"><img src="./img/icons/ps-min.png" alt="Photoshop" class="skills-list__img">
                             <span class="skills-list__tooltips-text">Photoshop CC</span>
                         </a>
                     </li>
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/chrome.png" alt="Google Chrome Dev" class="skills-list__img">
+                        <a class="skills-list__tooltips"><img src="./img/icons/chrome-min.png" alt="Google Chrome Dev" class="skills-list__img">
                             <span class="skills-list__tooltips-text">Chrome Dev</span>
                         </a>
                     </li>
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/mac.png" alt="MacOS" class="skills-list__img">
+                        <a class="skills-list__tooltips"><img src="./img/icons/mac-min.png" alt="MacOS" class="skills-list__img">
                             <span class="skills-list__tooltips-text">Mac OS</span>
                         </a>
                     </li>
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/pc.png" alt="PC" class="skills-list__img">
+                        <a class="skills-list__tooltips"><img src="./img/icons/pc-min.png" alt="PC" class="skills-list__img">
                             <span class="skills-list__tooltips-text">PC</span>
                         </a>
                     </li>
@@ -138,37 +127,37 @@
                 <h3>#Chcę opanować:</h3>
                 <ul class="skills-list">
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/js.png" alt="JavaScript" class="skills-list__img">
+                        <a class="skills-list__tooltips"><img src="./img/icons/js-min.png" alt="JavaScript" class="skills-list__img">
                             <span class="skills-list__tooltips-text">JavaScript</span>
                         </a>
                     </li>
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/jquery.png" alt="jQuery" class="skills-list__img">
+                        <a class="skills-list__tooltips"><img src="./img/icons/jquery-min.png" alt="jQuery" class="skills-list__img">
                             <span class="skills-list__tooltips-text">jQuery</span>
                         </a>
                     </li>
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/node.png" alt="Node" class="skills-list__img">
+                        <a class="skills-list__tooltips"><img src="./img/icons/node-min.png" alt="Node" class="skills-list__img">
                             <span class="skills-list__tooltips-text">Node.js</span>
                         </a>
                     </li>
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/angular.png" alt="Angular" class="skills-list__img">
+                        <a class="skills-list__tooltips"><img src="./img/icons/angular-min.png" alt="Angular" class="skills-list__img">
                             <span class="skills-list__tooltips-text">Angular</span>
                         </a>
                     </li>
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/react.png" alt="React" class="skills-list__img">
+                        <a class="skills-list__tooltips"><img src="./img/icons/react-min.png" alt="React" class="skills-list__img">
                             <span class="skills-list__tooltips-text">React.js</span>
                         </a>
                     </li>
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/bower.png" alt="Bower" class="skills-list__img">
+                        <a class="skills-list__tooltips"><img src="./img/icons/bower-min.png" alt="Bower" class="skills-list__img">
                             <span class="skills-list__tooltips-text">Bower</span>
                         </a>
                     </li>
                     <li>
-                        <a class="skills-list__tooltips"><img src="./img/icons/gulp.png" alt="Gulp" class="skills-list__img">
+                        <a class="skills-list__tooltips"><img src="./img/icons/gulp-min.png" alt="Gulp" class="skills-list__img">
                             <span class="skills-list__tooltips-text">Gulp</span>
                         </a>
                     </li>
@@ -180,10 +169,6 @@
                     <!-- works-container_gallery IMAGE DIMENSIONS 700X420 -->
                     <a href="https://github.com/malikowy/MRR" target="_blank" title="Strona dla firmy MRR" class="works-container_gallery rotate"><img src="./img/projects/mrr.png" alt="MRR page view"></a>
                     <a href="https://github.com/malikowy/portfolio-page" target="_blank" title="Moja pierwsza strona portfolio" class="works-container_gallery rotate"><img src="./img/projects/portfolio.png" alt="My first portfolio page"></a>
-                    <a href="#" title="Lorem ipsum" class="works-container_gallery rotate"><img src="./img/7.jpg" alt="" /></a>
-                    <a href="#" title="Lorem ipsum" class="works-container_gallery rotate"><img src="./img/5.jpg" alt="" /></a>
-                    <a href="#" title="Lorem ipsum" class="works-container_gallery rotate"><img src="./img/6.jpg" alt="" /></a>
-                    <a href="#" title="Lorem ipsum" class="works-container_gallery rotate"><img src="./img/7.jpg" alt="" /></a>
                 </div>
             </section>
             <footer class="contact" id="contact">
@@ -230,8 +215,12 @@
                         <p>Portfolio - Gabriel Ignatiuk</p>
                         <p>Ostatnia aktualizacja: grudzień 2016</p>
                     </div>
+                </div>
             </footer>
         </main>
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.1.3/iscroll.min.js"></script>
+        <script src="./js/drawer.min.js"></script>
         <!-- SMOOTH SCROLL -->
         <script>
             (function($) {
@@ -265,13 +254,13 @@
         <script src="./js/app.js"></script>
 
         <!-- TYPED.JS -->
-        <script src="./js/typed.js"></script>
+        <script src="./js/typed.min.js"></script>
         <script>
             $(function() {
                 $(".typed-text").typed({
                     strings: ["M4l", "Malikowyy", "Gabriel Ignatiuk"],
-                    typeSpeed: 50,
-                    backSpeed: 50,
+                    typeSpeed: 75,
+                    backSpeed: 80,
                     backDelay: 100,
                     showCursor: false,
                 });
