added new project to portfolio

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="keywords" content="Gabriel, Ignatiuk, frontend, front, end, develeoper, development, HTML5, CSS3, JavaScript, Angular, React, SASS, Atom, Mac">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
-        <link href="./css/normalize.css" rel="stylesheet" />
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet" />
         <link href="./css/css.css" rel="stylesheet" />
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="./css/drawer.css">
@@ -169,6 +169,7 @@
                     <!-- works-container_gallery IMAGE DIMENSIONS 700X420 -->
                     <a href="https://github.com/malikowy/MRR" target="_blank" title="Strona dla firmy MRR" class="works-container_gallery rotate"><img src="./img/projects/mrr.png" alt="MRR page view"></a>
                     <a href="https://github.com/malikowy/portfolio-page" target="_blank" title="Moja pierwsza strona portfolio" class="works-container_gallery rotate"><img src="./img/projects/portfolio.png" alt="My first portfolio page"></a>
+                    <a href="https://github.com/malikowy/j_wood_free" target="_blank" title="Drugi projekt z psd" class="works-container_gallery rotate"><img src="./img/projects/jwood.png" alt="My second project PSD to HTML"></a>
                 </div>
             </section>
             <footer class="contact" id="contact">
