--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
                 <p>Po dwóch latach przerwy wznowiłem działalność w temacie tworzenia stron internetowych. Początkowo przypominałem sobie nabyte wiadomości na temat HTML i CSS. Dodatkowo zagłębiłem się w HTML5 i CSS3 oraz zacząłem korzystać z preprocesora
                     SCSS. Kolejnym językiem, którego się uczę jest JavaScript, a następny krok to opanowanie React.js.
                 </p>
-                <button class="btn-mail">
-                    <a class="scrollTo" href="#contact">#Kontakt</a>
-                </button>
+                <a class="scrollTo" href="#contact"><button class="btn-mail">#Kontakt</button></a>
             </section>
             <section class="skills" id="skills">
                 <h2>#Umiejętności</h2>
