--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                     <a href="https://github.com/malikowy/j_wood_free" target="_blank" title="Drugi projekt z psd" class="works-container_gallery rotate"><img src="./img/projects/jwood.png" alt="My second project PSD to HTML"></a>
                     <a href="https://github.com/malikowy/fitapp_page" target="_blank" title="Trzeci projekt z psd" class="works-container_gallery rotate"><img src="./img/projects/fitapp.png" alt="My third project PSD to HTML"></a>
                     <a href="https://github.com/malikowy/apollo_page" target="_blank" title="Czwarty projekt z psd" class="works-container_gallery rotate"><img src="./img/projects/apollo.png" alt="My fourth project PSD to HTML"></a>
+                    <a href="https://github.com/malikowy/buckasur_page" target="_blank" title="Piąty projekt z psd" class="works-container_gallery rotate"><img src="./img/projects/buckasur.png" alt="My fifth project PSD to HTML"></a>
                 </div>
             </section>
             <footer class="contact" id="contact">
