added  alt description to images

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <script>
             $(function() {
                 $(".typed-text").typed({
-                    strings: ["M4l", "Malikowyy", "Gabriel Ignatiuk"],
+                    strings: ["M4l", "Malik", "Malikowyy", "Gabriel Ignatiuk"],
                     typeSpeed: 75,
                     backSpeed: 80,
                     backDelay: 100,
