minified drawer css and included that in index

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet" />
         <link href="./css/css.css" rel="stylesheet" />
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-        <link rel="stylesheet" href="./css/drawer.css">
+        <link rel="stylesheet" href="./css/drawer.min.css">
     </head>
 
     <body class="drawer drawer--top drawer--navbarTopGutter" id="top">
