new version of portfolio V3
changes:
more responsive for mobile and desktop
two CSS files

--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet" />
-        <link href="./css/css.css" rel="stylesheet" />
+        <link href="./css/style-mobile.css" rel="stylesheet" />
+        <link href="./css/style-desk.css" rel="stylesheet" />
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="./css/drawer.min.css">
     </head>
 
-    <body class="drawer drawer--top drawer--navbarTopGutter" id="top">
+    <body class="drawer drawer--top drawer--navbarTopGutter" id="home">
         <header class="drawer-navbar drawer-navbar--fixed" role="banner">
             <div class="drawer-container">
                 <div class="drawer-navbar-header">
+                    <a class="drawer-brand scrollTo" href="#home">#Do góry</a>
                     <button type="button" class="drawer-toggle drawer-hamburger">
                       <span class="sr-only">toggle navigation</span>
                       <span class="drawer-hamburger-icon"></span>
