updated date of last edit

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     </div>
                     <div class="contact-list__footer">
                         <p>Portfolio - Gabriel Ignatiuk</p>
-                        <p>Ostatnia aktualizacja: grudzień 2016</p>
+                        <p>Ostatnia aktualizacja: styczeń 2017</p>
                     </div>
                 </div>
             </footer>
